Modified first post

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -40,7 +40,7 @@
               {{ page.description }}
             </p>
             <h2>
-              出演者
+              話した人
             </h2>
             <div class="article-actors">
               {% for actor_id in page.actor_ids %}
