Added tweet button

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -33,6 +33,11 @@
                 <a href="{{ page.audio_file_path }}">MP3ファイルをダウンロード</a>
               </small>
             </p>
+            <p>
+              <a class="twitter-share-button" href="https://twitter.com/intent/tweet?hashtags={{ site.hashtag }}&url={{ site.url }}{{ page.url }}&text={{ page.title }}">
+                Tweet
+              </a>
+            </p>
             <h2>
               内容紹介
             </h2>
